--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,3 +52,9 @@ android {
 flutter {
     source '../..'
 }
+
+dependencies {
+    implementation platform('com.google.firebase:firebase-bom:26.7.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    }
+apply plugin: 'com.google.gms.google-services'
